# cinesafe-openenv

./: .dockerignore  .env.example  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
cinesafe_openenv/: action_handlers.py  client.py  constants.py  models.py  reward.py  scenario_loader.py  validators.py
cinesafe_openenv/baseline/: __init__.py  run_rule_based.py
cinesafe_openenv/data/: seed_manifest.json
cinesafe_openenv/data/schemas/: scenario.schema.json
cinesafe_openenv/data/tasks/easy/: easy_001.json
cinesafe_openenv/data/tasks/hard/: hard_001.json
cinesafe_openenv/data/tasks/medium/: medium_001.json
cinesafe_openenv/graders/: __init__.py  aggregate.py  department_grader.py  llm_judge.py  risk_grader.py  schedule_grader.py
cinesafe_openenv/server/: app.py  environment.py
scripts/: debug_task_scores.py
server/: __init__.py  app.py
tests/: test_env.py
