[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinesafe_openenv"
version = "0.1.0"
description = "Risk-aware film production planning environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.4",
    "orjson>=3.9.15",
    "jsonschema>=4.21.1",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0"
]

[tool.setuptools.packages.find]
include = ["server*", "cinesafe_openenv*"]
